--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       $(document).ready(function () {
         var lastBy;
         var odd = false;
-        var socket = io.connect('http://192.168.11.103:8080');
+        var socket = io.connect(location.href);
         socket.on('connect', function () {
           // nothing
         });
